# rapidvpi

./: LICENSE  README.md
.github/: FUNDING.yml
main/: CMakeLists.txt  Config.cmake.in
main/src/: entry.cpp
main/src/core/: core.cpp  core.hpp
main/src/scheduler/: scheduler.cpp  scheduler.hpp
main/src/testbase/: awaitchange.cpp  awaitread.cpp  awaitwrite.cpp  testbase.cpp  testbase.hpp  utility.cpp
main/src/testmanager/: CMakeLists.txt  testmanager.cpp  testmanager.hpp
main_win/: .gitignore  CMakeLists.txt  build.sh  build_win.bat  configure.sh  configure_win.bat  install.bat  install.sh
main_win/src/core/: CMakeLists.txt  core.cpp  core.hpp  user_factory_stub.cpp
main_win/src/scheduler/: CMakeLists.txt  scheduler.hpp
main_win/src/testbase/: CMakeLists.txt  awaitchange.cpp  awaitread.cpp  awaitwrite.cpp
templates/: quick_start.sh
templates/rtl_template/: CMakeLists.txt  dump.v
templates/rtl_template/scripts/sim/questa/: questa_run.tcl  vlog_options  vsim_options
templates/rtl_template/src/: clocked_adder.sv  dut_top.sv  dut_top.v
templates/uart_core/: README.md
templates/uart_core/rtl_uart_core/: .gitignore  .rules.verible_lint  .verilog_format  AGENTS.md  CMakeLists.txt
templates/uart_core/rtl_uart_core/docs/: design_guide.md  rtl_design_guide.md
templates/uart_core/rtl_uart_core/scripts/cmake/: questa_modules.cmake
templates/uart_core/rtl_uart_core/scripts/sim/questa/: questa_run.tcl  questa_run_gui.tcl  vlog_options  vsim_options
templates/uart_core/rtl_uart_core/src/: uart_baud_gen.sv  uart_byte_fifo.sv  uart_core.sv  uart_hw_flow_ctrl.sv  uart_pkg.sv  uart_rx.sv  uart_rx_sync.sv  uart_tx.sv
templates/uart_core/rtl_uart_core/waveforms/: wave.tcl
templates/uart_core/vip_uart_core/: AGENTS.md  CMakeLists.txt  README.md  vip_rework.md
templates/uart_core/vip_uart_core/docs/: user_guide.md  vip_design_guide.md
templates/uart_core/vip_uart_core/ext/vip_common/: CMakeLists.txt  README.md
templates/uart_core/vip_uart_core/ext/vip_common/agents/clock/: clock.cpp  clock.hpp
templates/uart_core/vip_uart_core/ext/vip_common/agents/por/: por.cpp  por.hpp
templates/uart_core/vip_uart_core/ext/vip_common/common/: common.cpp  common.hpp  logger.cpp  logger.hpp
templates/uart_core/vip_uart_core/ext/vip_common/docs/: vip_cosim_design_guide.md
templates/uart_core/vip_uart_core/ext/vip_common/runner/: case_helpers.hpp  runner.cpp  runner.hpp
templates/uart_core/vip_uart_core/ext/vip_common/scoreboard/: scoreboard.cpp  scoreboard.hpp
templates/uart_core/vip_uart_core/ext/vip_uart/: CMakeLists.txt  README.md
templates/uart_core/vip_uart_core/ext/vip_uart/agents/uart_rx/: CMakeLists.txt  README.md  rx.hpp  rx_agent.cpp  rx_coroutines.cpp
templates/uart_core/vip_uart_core/ext/vip_uart/agents/uart_tx/: CMakeLists.txt  README.md  tx.hpp  tx_agent.cpp  tx_coroutines.cpp
templates/uart_core/vip_uart_core/ext/vip_uart/common/: CMakeLists.txt  uart_params.cpp  uart_params.hpp  uart_types.hpp
templates/uart_core/vip_uart_core/ext/vip_uart/scoreboard/uart_scb/: CMakeLists.txt  README.md  scb_uart_rules.cpp  scb_uart_rules.hpp  scb_uart_stream.cpp  scb_uart_stream.hpp
templates/uart_core/vip_uart_core/src/: init.cpp  pindefs.hpp  test.cpp  test.hpp
templates/uart_core/vip_uart_core/src/agents/: CMakeLists.txt
templates/uart_core/vip_uart_core/src/agents/uart_core_intf/: CMakeLists.txt  intf.cpp  intf.hpp  intf_types.hpp
templates/uart_core/vip_uart_core/src/cases/: CMakeLists.txt  README.md  tc_basic.cpp  tc_basic.hpp  tc_cfg.cpp  tc_cfg.hpp  tc_error.cpp  tc_error.hpp  tc_fifo.cpp  tc_fifo.hpp  tc_flow_ctrl.cpp  tc_flow_ctrl.hpp  tc_phase.cpp  tc_phase.hpp  tc_reset.cpp  tc_reset.hpp  tc_stress_no_cts.cpp  tc_stress_no_cts.hpp  tc_utils.cpp  tc_utils.hpp
templates/uart_core/vip_uart_core/src/scoreboard/: CMakeLists.txt  scb_uart_core.cpp  scb_uart_core.hpp
templates/vip_template/: CMakeLists.txt
templates/vip_template/src/test/: test.cpp  test.hpp
templates/vip_template/src/test/modules/: test_impl.cpp  test_impl.hpp
templates/vip_template/src/test/modules/test_impl2/: CMakeLists.txt  test_impl2.cpp  test_impl2.hpp
templates_win/rtl_template/: .gitignore  .rules.verible_lint  .verilog_format  CMakeLists.txt  compile.bat  compile.sh  configure.bat  configure.sh  run.bat  run.sh  run_gui.bat  sim_questa_init.bat
templates_win/rtl_template/src/: clocked_adder.sv
templates_win/vip_template/: .gitignore  CMakeLists.txt  build.sh  build_win.bat  configure.bat  configure.sh
templates_win/vip_template/src/test/: test.hpp
templates_win/vip_template/src/test/modules/: test_impl.cpp
templates_win/vip_template/src/test/modules/test_impl2/: CMakeLists.txt  test_impl2.cpp
